tests/paczka1/fuzzy1/94134721.err
Error in line 2: mlbvWT S451 19,9
Error in line 5: d6Up S796 82,2
Error in line 4: 3Gfnu A533 41,4
Error in line 16: mlbvWT S796 89,1
Error in line 28: CfPi S451 32,1
Error in line 36: mlbvWT S796 44,2
